--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 class="icon"
               />
               <h3>Learning</h3>
-              <p>Fullstack Developer(MERN)</p>
+              <p>Fullstack Developelopment(MERN)</p>
             </div>
             <div class="details-container">
               <img
@@ -146,7 +146,7 @@ Highly motivated and dedicated Computer Engineering graduate with a strong desir
                 />
                 <div>
                   <h3>CSS</h3>
-                  <p>Experienced</p>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -167,7 +167,7 @@ Highly motivated and dedicated Computer Engineering graduate with a strong desir
                   class="icon"
                 />
                 <div>
-                  <h3>SASS</h3>
+                  <h3>TailWind CSS</h3>
                   <p>Basic</p>
                 </div>
               </article>
@@ -189,7 +189,7 @@ Highly motivated and dedicated Computer Engineering graduate with a strong desir
                   class="icon"
                 />
                 <div>
-                  <h3>Material UI</h3>
+                  <h3>Figma</h3>
                   <p>Basic</p>
                 </div>
               </article>
@@ -217,7 +217,7 @@ Highly motivated and dedicated Computer Engineering graduate with a strong desir
                 />
                 <div>
                   <h3>Node JS</h3>
-                  <p>Intermediate</p>
+                  <p>Begineer</p>
                 </div>
               </article>
               <article>
@@ -228,7 +228,7 @@ Highly motivated and dedicated Computer Engineering graduate with a strong desir
                 />
                 <div>
                   <h3>Express JS</h3>
-                  <p>Intermediate</p>
+                  <p>Begineer</p>
                 </div>
               </article>
               <article>
@@ -309,6 +309,22 @@ Highly motivated and dedicated Computer Engineering graduate with a strong desir
         <div class="project-card">
           <h3>AN E-HEALTH CARE CHATBOT</h3>
           <p>Final year Project-Ill Chatbot developed to analyze the disease with the help of symptoms and also provide precaution using Decision Tree algorithm.</p>
+          <img
+            src="./assets/github.png"
+            alt="My Github profile"
+            class="icon"
+            onclick="location.href='https://github.com/nabinhamal/chatbot'"
+          />
+        </div>
+        <div class="project-card">
+          <h3>Personal Webiste</h3>
+          <p>Personal websitebuild using HTML,CSS,JAVASCRIPT. </p>
+          <img
+          src="./assets/github.png"
+          alt="My Github profile"
+          class="icon"
+          onclick="location.href='https://github.com/nabinhamal/portfolio'"
+        />
         </div>
       </div>
     </div>
