--- a/index.html
+++ b/index.html
@@ -319,11 +319,12 @@ Highly motivated and dedicated Computer Engineering graduate with a strong desir
         <div class="project-card">
           <h3>Personal Webiste</h3>
           <p>Personal websitebuild using HTML,CSS,JAVASCRIPT. </p>
-          <img
+
+         <p>LINK: <img
           src="./assets/github.png"
           alt="My Github profile"
           class="icon"
-          onclick="location.href='https://github.com/nabinhamal/portfolio'"
+          onclick="location.href='https://github.com/nabinhamal/portfolio'"</p>
         />
         </div>
       </div>
