--- a/index.html
+++ b/index.html
@@ -319,9 +319,9 @@ Highly motivated and dedicated Computer Engineering graduate with a strong desir
         <div class="project-card">
           <h3>Personal Webiste</h3>
           <p>Personal websitebuild using HTML,CSS,JAVASCRIPT. </p>
-          <p>Link:https://github.com/nabinhamal/portfolio </p>
+          Link:<a href="https://github.com/nabinhamal/chatbot">https://github.com/nabinhamal/chatbot</a>
          
-        />
+        
         </div>
       </div>
     </div>
