--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ Highly motivated and dedicated Computer Engineering graduate with a strong desir
                   class="icon"
                 />
                 <div>
-                  <h3>Figma</h3>
+                  <h3>Figma (UI/UX)</h3>
                   <p>Basic</p>
                 </div>
               </article>
@@ -309,17 +309,12 @@ Highly motivated and dedicated Computer Engineering graduate with a strong desir
         <div class="project-card">
           <h3>AN E-HEALTH CARE CHATBOT</h3>
           <p>Final year Project-Ill Chatbot developed to analyze the disease with the help of symptoms and also provide precaution using Decision Tree algorithm.</p>
-          <img
-            src="./assets/github.png"
-            alt="My Github profile"
-            class="icon"
-            onclick="location.href='https://github.com/nabinhamal/chatbot'"
-          />
+          <p> Link:<a href="https://github.com/nabinhamal/chatbot">https://github.com/nabinhamal/chatbot</a></
         </div>
         <div class="project-card">
           <h3>Personal Webiste</h3>
           <p>Personal websitebuild using HTML,CSS,JAVASCRIPT. </p>
-          Link:<a href="https://github.com/nabinhamal/chatbot">https://github.com/nabinhamal/chatbot</a>
+         <p> Link:<a href="https://github.com/nabinhamal/Portfolio">https://github.com/nabinhamal/Portfolio</a></p>
          
         
         </div>
