--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ Highly motivated and dedicated Computer Engineering graduate with a strong desir
         <div class="project-card">
           <h3>Personal Webiste</h3>
           <p>Personal websitebuild using HTML,CSS,JAVASCRIPT. </p>
-         <p> Link:<a href="https://github.com/nabinhamal/Portfolio">https://github.com/nabinhamal/Portfolio</a></p>
+         <p> Link:<a href="https://nabinhamalportfolio.netlify.app/">https://nabinhamalportfolio.netlify.app/</a></p>
         
         
         </div>
