--- a/index.html
+++ b/index.html
@@ -295,7 +295,6 @@ Highly motivated and dedicated Computer Engineering graduate with a strong desir
       </div>
       <div class="details-container color-container">
         <h2 class="experience-sub-title project-title">PROJECTS</h2>
-        <br>
         <div class="project-card">
           <h3>STUDENT MANAGEMENT SYSTEM</h3>
           <p>Project-1 for B.E. 2nd year. A web application for student management system developed using Java and MySQL.</p>
@@ -309,14 +308,14 @@ Highly motivated and dedicated Computer Engineering graduate with a strong desir
         <div class="project-card">
           <h3>AN E-HEALTH CARE CHATBOT</h3>
           <p>Final year Project-Ill Chatbot developed to analyze the disease with the help of symptoms and also provide precaution using Decision Tree algorithm.</p>
-          <p> Link:<a href="https://github.com/nabinhamal/chatbot">https://github.com/nabinhamal/chatbot</a></
+          <p> Link:<a href="https://github.com/nabinhamal/chatbot">https://github.com/nabinhamal/chatbot</a>
         </div>
         <br>
         <div class="project-card">
           <h3>Personal Webiste</h3>
           <p>Personal websitebuild using HTML,CSS,JAVASCRIPT. </p>
          <p> Link:<a href="https://nabinhamalportfolio.netlify.app/">https://nabinhamalportfolio.netlify.app/</a></p>
-        
+        </div>
         
         </div>
       </div>
