--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="Nabin Hamal profile picture" />
+        <img src="./assets/profile.png" alt="Nabin Hamal profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -75,13 +75,7 @@
       <p class="section__text__p1"></p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
-        <div class="section__pic-container">
-          <img
-            src="./assets/about-pic.jpeg"
-            alt="Profile picture"
-            class="about-pic"
-          />
-        </div>
+       
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
