--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ Highly motivated and dedicated Computer Engineering graduate with a strong desir
                 />
                 <div>
                   <h3>ReactJS</h3>
-                  <p>Intermediate</p>
+                  <p>Basic</p>
                 </div>
               </article>
               <article>
@@ -211,7 +211,7 @@ Highly motivated and dedicated Computer Engineering graduate with a strong desir
                 />
                 <div>
                   <h3>Node JS</h3>
-                  <p>Begineer</p>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
