--- a/index.html
+++ b/index.html
@@ -310,6 +310,12 @@ Highly motivated and dedicated Computer Engineering graduate with a strong desir
           <p>Personal websitebuild using HTML,CSS,JAVASCRIPT. </p>
          <p> Link:<a href="https://nabinhamalportfolio.netlify.app/">https://nabinhamalportfolio.netlify.app/</a></p>
         </div>
+        <br>
+        <div class="project-card">
+          <h3>Mern Portfolio </h3>
+          <p>Full stack portfolio wwebsite developed using React Js and Tailwind CSS (Frontend) and Express Js and MongoDB(Backend). The api is hosted using Vercel and the frontend is hosted using Netlify </p>
+         <p> Link:<a href="https://nabinhamal.netlify.app/">https://nabinhamal.netlify.app/</a></p>
+        </div>
         
         </div>
       </div>
