--- a/index.html
+++ b/index.html
@@ -307,13 +307,13 @@ Highly motivated and dedicated Computer Engineering graduate with a strong desir
         <br>
         <div class="project-card">
           <h3>Personal Webiste</h3>
-          <p>Personal websitebuild using HTML,CSS,JAVASCRIPT. </p>
+          <p>Personal websitebuild using HTML,CSS,JAVASCRIPT.It is hosted using the Netlify </p>
          <p> Link:<a href="https://nabinhamalportfolio.netlify.app/">https://nabinhamalportfolio.netlify.app/</a></p>
         </div>
         <br>
         <div class="project-card">
           <h3>Mern Portfolio </h3>
-          <p>Full stack portfolio wwebsite developed using React Js and Tailwind CSS (Frontend) and Express Js and MongoDB(Backend). The api is hosted using Vercel and the frontend is hosted using Netlify </p>
+          <p>Full stack portfolio website developed using React Js and Tailwind CSS for Frontend and  Express Js and MongoDB for Backend. The api is hosted using Vercel and the frontend is hosted using Netlify. </p>
          <p> Link:<a href="https://nabinhamal.netlify.app/">https://nabinhamal.netlify.app/</a></p>
         </div>
         
