--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ Highly motivated and dedicated Computer Engineering graduate with a strong desir
         <br>
         <div class="project-card">
           <h3>Mern Portfolio </h3>
-          <p>Full stack portfolio website developed using React Js and Tailwind CSS for Frontend and  Express Js and MongoDB for Backend. The api is hosted using Vercel and the frontend is hosted using Netlify. </p>
+          <p>Full stack portfolio website developed using React Js and Tailwind CSS for Frontend and  Express Js and MongoDB for Backend. The api is hosted on Vercel and the frontend is hosted on Netlify. </p>
          <p> Link:<a href="https://nabinhamal.netlify.app/">https://nabinhamal.netlify.app/</a></p>
         </div>
         
