--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 class="icon"
               />
               <h3>Learning</h3>
-              <p>Fullstack Developelopment(MERN)</p>
+              <p>Fullstack Development(MERN)</p>
             </div>
             <div class="details-container">
               <img
