--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 class="icon"
               />
               <h3>Learning</h3>
-              <p>Fullstack Development(MERN)</p>
+              <p>React Native</p>
             </div>
             <div class="details-container">
               <img
@@ -98,10 +98,10 @@
             </div>
           </div>
           <div class="text-container">
-            <p>
-               
-Highly motivated and dedicated Computer Engineering graduate with a strong desire to gain practical experience in the field. Seeking an entry-level position or internship opportunity to apply theoretical knowledge, develop practical skills, and contribute to innovative projects. Eager to learn and grow within a dynamic and challenging environment.
-
+            <p> 
+              Graduated in Computer Engineering with solid understanding of full-stack development, including
+              MERN stack and Next.js. Seeking to apply theoretical knowledge, enhance practical skills, and drive
+              innovative projects in a dynamic environment.
             </p>
           </div>
         </div>
@@ -290,31 +290,72 @@ Highly motivated and dedicated Computer Engineering graduate with a strong desir
       <div class="details-container color-container">
         <h2 class="experience-sub-title project-title">PROJECTS</h2>
         <div class="project-card">
-          <h3>STUDENT MANAGEMENT SYSTEM</h3>
-          <p>Project-1 for B.E. 2nd year. A web application for student management system developed using Java and MySQL.</p>
+          <h3>JUTTAPASAL(ECOMMERCE WEB APP)</h3>
+          <p>Dynamic and responsive user interfaces developed using React js.
+            Tailwind CSS for responsive design and styling. Create, read, update, and delete(CRUD Functionality) for products management .
+            Implemented JWT, Firebase, and Google OAuth for secure and seamless user access.
+            Implemented search features to search for products using name of shoe or by brand name or by
+            discount.
+            MongoDB as database to store user information and the items data
+            Deployed the MERN real estate app for free using the 'Render' platform.
+            Redux Toolkit is used for state management .
+            </p>
+            <p> Link:<a href="https://juttapasal-26nz.onrender.com">https://juttapasal-26nz.onrender.com</a>
         </div>
         <br>
         <div class="project-card">
-          <h3>COLLEGE WEBSITE</h3>
-          <p>Project-ll for B.E. 3rd year. Website developed using PHP with chat feature.</p>
+          <h3>Portfolio WEBSITE(Mern)</h3>
+          <p>eveloped dynamic and responsive user interfaces using React.js and styling using Tailwind Css.
+            Created RESTful APIs using the Node Js
+            Utilized MongoDB for scalable and efficient data storage and retrieval.
+            Implemented CRUD (Create, Read, Update, Delete) functionality to manage application data.
+            Deployed the frontend on Netlify and the backend on render.
+            </p>
+            <p> Link:<a href="https://github.com/nabinhamal/mernportfolio">https://nabinhamal.netlify.app</a>
         </div>
         <br>
         <div class="project-card">
-          <h3>AN E-HEALTH CARE CHATBOT</h3>
-          <p>Final year Project-Ill Chatbot developed to analyze the disease with the help of symptoms and also provide precaution using Decision Tree algorithm.</p>
-          <p> Link:<a href="https://github.com/nabinhamal/chatbot">https://github.com/nabinhamal/chatbot</a>
+          <h3>Mern Authentication</h3>
+          <p>Dynamic and responsive user interfaces developed using React js.
+            Tailwind CSS for responsive design and styling.
+            Node Js framework(Express js ) is used for API servers.
+            MongoDb is used to store user data.
+            Implemented CRUD (Create, Read, Update, Delete) functionality to manage application data.
+            OTP feature implemented to reset the password.
+           </p>
+          <p> Link:<a href="https://github.com/nabinhamal/authntication">https://mernauthentication-zzm2.onrender.com</a>
         </div>
         <br>
         <div class="project-card">
-          <h3>Personal Webiste</h3>
-          <p>Personal websitebuild using HTML,CSS,JAVASCRIPT.It is hosted using the Netlify </p>
-         <p> Link:<a href="https://nabinhamalportfolio.netlify.app/">https://nabinhamalportfolio.netlify.app/</a></p>
+          <h3>Sajilai (Real EState )</h3>
+          <p> Dynamic and responsive user interfaces developed using React js.
+            Tailwind CSS for responsive design and styling.
+            Create, read, update, and delete(CRUD Functionality) for property listings management .
+            Implemented JWT, Firebase, and Google OAuth for secure and seamless user access.
+            Implemented search features to search for properties.
+            MongoDB as database to store user information and the property listing data 
+           Learned to deploy the MERN real estate app for free using the 'Render' platform.</p>
+         <p> Link:<a href="
+          https://github.com/nabinhamal/sajilo">LINKS: https://sajilai.onrender.com</a></p>
         </div>
         <br>
         <div class="project-card">
-          <h3>Mern Portfolio </h3>
-          <p>Full stack portfolio website developed using React Js and Tailwind CSS for Frontend and  Express Js and MongoDB for Backend. The api is hosted on Vercel and the frontend is hosted on Netlify. </p>
-         <p > <b>Link</b><a href="https://nabinhamal.netlify.app/">https://nabinhamal.netlify.app/</a></p>
+          <h3>Real-Time Messenger (NEXT.JS) </h3>
+          <p>Developed the user interface and server-side rendering using Next.js, ensuring a smooth and intuitive
+            user experience.
+            Styled the application with Tailwind CSS to create responsive and modern design.
+            Learned to use Prisma to interact with the database, providing a seamless data management.
+            Implemented real-time messaging functionality using Pusher, enabling users to communicate
+            instantly.
+            Integrated NextAuth for credential authentication
+            Credential authentication with NextAuth.
+            Enabled users to upload files and images using Cloudinary CDN, providing a reliable and scalable
+            solution for media storage.
+            Implemented group chats and one-on-one messaging, allowing users to communicate individually or
+            in groups.
+            Provided message read receipts, indicating when messages were seen by recipients.</p>
+         <p > <b>Link</b><a href="https://github.com/nabinhamal/messenger-clone">
+          https://next-messenger-pied.vercel.app</a></p>
         </div>
         
         </div>
