--- a/index.html
+++ b/index.html
@@ -290,26 +290,16 @@
       <div class="details-container color-container">
         <h2 class="experience-sub-title project-title">PROJECTS</h2>
         <div class="project-card">
-          <h3>JUTTAPASAL(ECOMMERCE WEB APP)</h3>
-          <p>Dynamic and responsive user interfaces developed using React js.
-            Tailwind CSS for responsive design and styling. Create, read, update, and delete(CRUD Functionality) for products management .
-            Implemented JWT, Firebase, and Google OAuth for secure and seamless user access.
-            Implemented search features to search for products using name of shoe or by brand name or by
-            discount.
-            MongoDB as database to store user information and the items data
-            Deployed the MERN real estate app for free using the 'Render' platform.
-            Redux Toolkit is used for state management .
+          <h3>Juttapasal (Ecommerce Web App)</h3>
+          <p>Dynamic and responsive user interfaces developed using React js and TailWind CSS.For backend Node js.It is hosted on render.
             </p>
             <p> Link:<a href="https://juttapasal-26nz.onrender.com">https://juttapasal-26nz.onrender.com</a>
         </div>
         <br>
         <div class="project-card">
           <h3>Portfolio WEBSITE(Mern)</h3>
-          <p>eveloped dynamic and responsive user interfaces using React.js and styling using Tailwind Css.
-            Created RESTful APIs using the Node Js
-            Utilized MongoDB for scalable and efficient data storage and retrieval.
-            Implemented CRUD (Create, Read, Update, Delete) functionality to manage application data.
-            Deployed the frontend on Netlify and the backend on render.
+          <p>Developed dynamic and responsive user interfaces using React.js and styling using Tailwind CSS with crud functionality.For data storage MOngoDb is used
+           and frontend is hosted on netlify and backend on render.
             </p>
             <p> Link:<a href="https://github.com/nabinhamal/mernportfolio">https://nabinhamal.netlify.app</a>
         </div>
@@ -317,10 +307,8 @@
         <div class="project-card">
           <h3>Mern Authentication</h3>
           <p>Dynamic and responsive user interfaces developed using React js.
-            Tailwind CSS for responsive design and styling.
-            Node Js framework(Express js ) is used for API servers.
-            MongoDb is used to store user data.
-            Implemented CRUD (Create, Read, Update, Delete) functionality to manage application data.
+            Tailwind CSS for responsive design and styling. Node Js framework(Express js ) is used for API servers.
+            MongoDb is used to store user data.Implemented CRUD (Create, Read, Update, Delete) functionality to manage application data.
             OTP feature implemented to reset the password.
            </p>
           <p> Link:<a href="https://github.com/nabinhamal/authntication">https://mernauthentication-zzm2.onrender.com</a>
@@ -328,32 +316,19 @@
         <br>
         <div class="project-card">
           <h3>Sajilai (Real EState )</h3>
-          <p> Dynamic and responsive user interfaces developed using React js.
-            Tailwind CSS for responsive design and styling.
-            Create, read, update, and delete(CRUD Functionality) for property listings management .
-            Implemented JWT, Firebase, and Google OAuth for secure and seamless user access.
-            Implemented search features to search for properties.
-            MongoDB as database to store user information and the property listing data 
+          <p>Create, read, update, and delete(CRUD Functionality) for property listings management .
+            Implemented JWT, Firebase, and Google OAuth for secure and seamless user access MongoDB as database to store data.
            Learned to deploy the MERN real estate app for free using the 'Render' platform.</p>
-         <p> Link:<a href="
-          https://github.com/nabinhamal/sajilo">LINKS: https://sajilai.onrender.com</a></p>
+         <p> Link:<a href=" https://github.com/nabinhamal/sajilo">LINKS: https://sajilai.onrender.com</a></p>
         </div>
         <br>
         <div class="project-card">
           <h3>Real-Time Messenger (NEXT.JS) </h3>
           <p>Developed the user interface and server-side rendering using Next.js, ensuring a smooth and intuitive
-            user experience.
-            Styled the application with Tailwind CSS to create responsive and modern design.
-            Learned to use Prisma to interact with the database, providing a seamless data management.
-            Implemented real-time messaging functionality using Pusher, enabling users to communicate
-            instantly.
-            Integrated NextAuth for credential authentication
-            Credential authentication with NextAuth.
-            Enabled users to upload files and images using Cloudinary CDN, providing a reliable and scalable
-            solution for media storage.
-            Implemented group chats and one-on-one messaging, allowing users to communicate individually or
-            in groups.
-            Provided message read receipts, indicating when messages were seen by recipients.</p>
+            user experience.Learned to use Prisma to interact with the database, providing a seamless data management.
+   Implemented real-time messaging functionality using Pusher.Integrated NextAuth for credential authentication.
+    Enabled users to upload files and images using Cloudinary CDN, providing a reliable and scalable solution for media storage.
+  Implemented group chats and one-on-one messaging.Provided message read receipts, indicating when messages were seen by recipients.</p>
          <p > <b>Link</b><a href="https://github.com/nabinhamal/messenger-clone">
           https://next-messenger-pied.vercel.app</a></p>
         </div>
