--- a/index.html
+++ b/index.html
@@ -325,9 +325,8 @@
         <div class="project-card">
           <h3>Real-Time Messenger (NEXT.JS) </h3>
           <p>Developed the user interface and server-side rendering using Next.js, ensuring a smooth and intuitive
-            user experience.Learned to use Prisma to interact with the database, providing a seamless data management.
+            user experience.Learned to use Prisma to interact with the database.
    Implemented real-time messaging functionality using Pusher.Integrated NextAuth for credential authentication.
-    Enabled users to upload files and images using Cloudinary CDN, providing a reliable and scalable solution for media storage.
   Implemented group chats and one-on-one messaging.Provided message read receipts, indicating when messages were seen by recipients.</p>
          <p > <b>Link</b><a href="https://github.com/nabinhamal/messenger-clone">
           https://next-messenger-pied.vercel.app</a></p>
